FIX #7501
Fixes the misaligned text of the MudTablePager Select element.

--- a/src/MudBlazor/Styles/components/_table.scss
+++ b/src/MudBlazor/Styles/components/_table.scss
@@ -360,6 +360,7 @@
 
     & .mud-select-input {
         margin-top: 0px !important;
+        padding: 0 7px;
     }
 
     & .mud-input .mud-input-root {
